# 2019A-NP-RIPv2

./: .gitignore  CMakeLists.txt
HAL/include/: router_hal.h
HAL/src/linux/platform/: standard.h
Homework/ripv2/: CMakeLists.txt  common.hpp  debug.hpp  environment.hpp  exchanging.hpp  forwarding.hpp  hal.hpp  main.cpp  table.hpp
Homework/ripv2/format/: common.hpp  ip.hpp  rip.hpp
